# AI-Voice-Assistant

./: .env  .gitignore  Dockerfile  README.md  agents.py  config.py  docker-compose.yml  prompts.py  pyproject.toml  requirements.txt  tools.py
dbs/history/: history.sqlite
dbs/vector/: meta.json
dbs/vector/collection/memories/: storage.sqlite
